@@ -1,11 +1,0 @@
-#!/bin/bash
-
-echo "Stupid and simple script to generate the documentation manually..."
-
-asciidoctor \
-    --attribute source-highlighter=pygments \
-    src/main/asciidoc/scanner.adoc
-
-#    --verbose \
-#    --backend html5 \
-
