@@ -49,6 +49,7 @@
          ! Oliver B. Fischer, 2017-05-20
          !-->
         <jqassistant.scan.continueOnError>true</jqassistant.scan.continueOnError>
+        <jsonassert.version>1.5.1</jsonassert.version>
     </properties>
 
 
@@ -77,6 +78,12 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>${jsonassert.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
